...
            ),
            onPressed: () async {
              context.pushNamed('home_dashboard_baru');
            },
          ),
          title: Text(
            'Konseling',
            style: FlutterFlowTheme.of(context).headlineMedium.override(
                  fontFamily: 'Poppins',
                  color: const Color(0xFF5D629A),
                  fontSize: 24.0,
                  letterSpacing: 0.0,
                  fontWeight: FontWeight.w600,
...
                        padding: const EdgeInsetsDirectional.fromSTEB(
                            36.0, 12.0, 36.0, 12.0),
                        child: FFButtonWidget(
                          onPressed: () async {
                            context.pushNamed('pilih_dokter_ajukan_jadwal');
                          },
                          text: 'Ajukan Jadwal',
                          options: FFButtonOptions(
                            height: 50.0,
                            padding: const EdgeInsetsDirectional.fromSTEB(
                                16.0, 0.0, 16.0, 0.0),
                            iconPadding: const EdgeInsetsDirectional.fromSTEB(
                                0.0, 0.0, 0.0, 0.0),
...
