...
                ),
                onPressed: () async {
                  context.pop();
                },
              ),
              title: Text(
                'Detail Konseling',
                style: FlutterFlowTheme.of(context).headlineMedium.override(
                      fontFamily: 'Poppins',
                      color: const Color(0xFF4C4F81),
                      fontSize: 24.0,
                      letterSpacing: 0.0,
                      fontWeight: FontWeight.w600,
...
